# url-scheme-handler

./: .gitignore  Cargo.toml  LICENSE  README.md
reg/: Enable_ExternalProtocolDialog_ShowCheckbox.reg  Remove_ExternalProtocolDialog_ShowCheckbox.reg
src/: main.rs
