[package]
name = "url-scheme-handler"
version = "1.0.1"
edition = "2021"

[dependencies]
base64 = "0.22.1"
eframe = "0.29.0"
egui_extras = { version = "0.29.0", features = ["all_loaders"] }
flate2 = "1.0.35"
rfd = "0.15.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
urlencoding = "2.1.3"
winapi = "0.3.9"
winreg = "0.52.0"

[profile.release]
opt-level = "z"
